HVAC Backup 2/objects/Alternate_Part__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Alternate Parts</relationshipLabel>
        <relationshipName>Alternate_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Parent Part</relationshipLabel>
        <relationshipName>Parent_Part</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Code__c</fullName>
        <formula>Alternate_Part__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Name__c</fullName>
        <formula>Alternate_Part__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Name</label>
        <type>Text</type>
    </fields>
    <label>Alternate Part</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Alternate Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alternate Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>